--- a/demo.css
+++ b/demo.css
@@ -1,11 +1,63 @@
 body {
 	background-color: black;
-	overflow: hidden;
+  overflow-x:hidden;
+}
+
+h1{
+  padding-top:10px;
+  padding-left:10px;
+  color: grey;
+
+}
+
+.info{
+  position: inline-block;
+  margin-left:auto;
+  margin-right:auto;
+  width: 80%;
+  height: 200px;
+  border-radius: 25px;
+}
+
+#infoicons{
+  margin-left: 40px;
+  width: 100%;
+  height: 20px;
+  background: transparent;
+}
+
+
+#description{
+ background: rgba(255, 255, 255, 0.8);
+  margin-top: 100vh;
+}
+
+#challenges{
+ background: rgba(255, 255, 255, 0.8);
+  margin-top: 100px;
+}
+
+
+#people{
+ background: rgba(255, 255, 255, 0.8);
+  margin-top: 100px;
+}
+
+#individual{
+ background: rgba(255, 255, 255, 0.8);
+  margin-top: 100px;
+}
+
+canvas {
+  top:0;
+  position:fixed;
+  z-index:-2;
 }
 
 #meter {
-  position: absolute;
+  position: fixed;
   background-color: transparent;
   width: 50px;
   height: 500px;
+  z-index:-1;
 }
