--- a/demo.css
+++ b/demo.css
@@ -1,13 +1,20 @@
 body {
-	background-color: black;
+  background-color: black;
   overflow-x:hidden;
 }
 
 h1{
   padding-top:10px;
-  padding-left:10px;
+  padding-left:20px;
   color: grey;
 
+}
+
+p{
+  padding-top:10px;
+  padding-left:20px;
+  padding-bottom:10px;
+  padding-right:20px;
 }
 
 .info{
@@ -15,7 +22,7 @@ h1{
   margin-left:auto;
   margin-right:auto;
   width: 80%;
-  height: 200px;
+  height: 100%;
   border-radius: 25px;
 }
 
@@ -28,23 +35,25 @@ h1{
 
 
 #description{
- background: rgba(255, 255, 255, 0.8);
+  background: rgba(255, 255, 255, 0.8);
   margin-top: 100vh;
 }
 
 #challenges{
- background: rgba(255, 255, 255, 0.8);
+  background: rgba(255, 255, 255, 0.8);
   margin-top: 100px;
 }
 
 
 #people{
- background: rgba(255, 255, 255, 0.8);
+  background: rgba(255, 255, 255, 0.8);
   margin-top: 100px;
+  height:400px;
+  content:center;
 }
 
 #individual{
- background: rgba(255, 255, 255, 0.8);
+  background: rgba(255, 255, 255, 0.8);
   margin-top: 100px;
 }
 
@@ -52,6 +61,7 @@ canvas {
   top:0;
   position:fixed;
   z-index:-2;
+
 }
 
 #meter {
@@ -60,4 +70,19 @@ canvas {
   width: 50px;
   height: 500px;
   z-index:-1;
+}
+
+.contact{
+  text-align:left;
+}
+
+.contactpic{
+  float:left;
+  margin-left:10px;
+  margin-right:10px;
+}
+
+.ccont{
+  float:left;
+  width:320px;
 }
